--- a/.github/workflows/firebase-hosting-pr-close.yml
+++ b/.github/workflows/firebase-hosting-pr-close.yml
@@ -1,23 +1,23 @@
 name: Pull request closed
 on:
-  pull_request:
-    types: [closed]
+    pull_request:
+        types: [closed]
 
 jobs:
-  delete_qa:
-    name: Delete Firebase Hosting preview (QA)
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
+    delete_qa:
+        name: Delete Firebase Hosting preview (QA)
+        runs-on: 'ubuntu-latest'
+        steps:
+            - name: Checkout branch
+              uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
+            - name: Setup Node
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
 
-      - name: Delete Firebase Hosting channel
-        working-directory: frontend
-        run: |
-          npm install -g firebase-tools
-          firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' -f --token '${{ secrets.FIREBASE_CI_TOKEN }}'
+            - name: Delete Firebase Hosting channel
+              working-directory: frontend
+              run: |
+                  npm install -g firebase-tools
+                  firebase hosting:channel:delete 'pull-request-${{ github.event.pull_request.number }}' -f --token '${{ secrets.FIREBASE_CI_TOKEN }}'
