--- a/.github/workflows/firebase-hosting-release.yml
+++ b/.github/workflows/firebase-hosting-release.yml
@@ -1,79 +1,79 @@
 name: Build, Test & Deploy Prod
 on:
-  release:
-    types: [published]
+    release:
+        types: [published]
 
 jobs:
-  build:
-    name: Build frontend
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
+    build:
+        name: Build frontend
+        runs-on: 'ubuntu-latest'
+        steps:
+            - name: Checkout branch
+              uses: actions/checkout@v2
 
-      - name: Setup Yarn
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-          cache: "yarn"
+            - name: Setup Yarn
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
+                  cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn install
-        working-directory: frontend
+            - name: Install dependencies
+              run: yarn install
+              working-directory: frontend
 
-      - name: Build app
-        run: yarn build
-        working-directory: frontend
+            - name: Build app
+              run: yarn build
+              working-directory: frontend
 
-      - name: Upload build
-        uses: actions/upload-artifact@v2
-        with:
-          name: frontend-preprod
-          path: frontend/build
+            - name: Upload build
+              uses: actions/upload-artifact@v2
+              with:
+                  name: frontend-preprod
+                  path: frontend/build
 
-  test:
-    name: Test frontend
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
+    test:
+        name: Test frontend
+        runs-on: 'ubuntu-latest'
+        steps:
+            - name: Checkout branch
+              uses: actions/checkout@v2
 
-      - name: Setup Yarn
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-          cache: "yarn"
+            - name: Setup Yarn
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
+                  cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn install
-        working-directory: frontend
+            - name: Install dependencies
+              run: yarn install
+              working-directory: frontend
 
-      - name: Test app
-        run: yarn test
-        working-directory: frontend
-      # todo : add code coverage reports
+            - name: Test app
+              run: yarn test
+              working-directory: frontend
+            # todo : add code coverage reports
 
-  deploy_qa:
-    name: Deploy to Firebase Hosting live (Prod)
-    runs-on: "ubuntu-latest"
-    needs: [build, test]
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
+    deploy_qa:
+        name: Deploy to Firebase Hosting live (Prod)
+        runs-on: 'ubuntu-latest'
+        needs: [build, test]
+        steps:
+            - name: Checkout branch
+              uses: actions/checkout@v2
 
-      - name: Download Build
-        uses: actions/download-artifact@v2
-        with:
-          name: frontend-preprod
-          path: frontend/build
+            - name: Download Build
+              uses: actions/download-artifact@v2
+              with:
+                  name: frontend-preprod
+                  path: frontend/build
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
+            - name: Setup Node
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
 
-      - name: Deploy to Prod
-        working-directory: frontend
-        run: |
-          npm install -g firebase-tools
-          firebase hosting:clone ${{ secrets.FIREBASE_ID }}:preprod ${{ secrets.FIREBASE_ID }}:live --token '${{ secrets.FIREBASE_CI_TOKEN }}'
+            - name: Deploy to Prod
+              working-directory: frontend
+              run: |
+                  npm install -g firebase-tools
+                  firebase hosting:clone ${{ secrets.FIREBASE_ID }}:preprod ${{ secrets.FIREBASE_ID }}:live --token '${{ secrets.FIREBASE_CI_TOKEN }}'
