--- a/.github/workflows/linting-push.yml
+++ b/.github/workflows/linting-push.yml
@@ -1,26 +1,26 @@
 name: Linting on push
 on:
-  push:
-    branches-ignore: [main]
+    push:
+        branches-ignore: [main]
 
 jobs:
-  build:
-    name: Lint code
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v2
+    build:
+        name: Lint code
+        runs-on: 'ubuntu-latest'
+        steps:
+            - name: Checkout branch
+              uses: actions/checkout@v2
 
-      - name: Setup Yarn
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-          cache: "yarn"
+            - name: Setup Yarn
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
+                  cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn install
-        working-directory: frontend
+            - name: Install dependencies
+              run: yarn install
+              working-directory: frontend
 
-      - name: Lint code
-        run: yarn lint
-        working-directory: frontend
+            - name: Lint code
+              run: yarn lint
+              working-directory: frontend
